--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,12 @@
         "guzzlehttp/guzzle": "^6.2",
         "himik/simple-graphql-query-builder": "0.2.4"
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/ravivco/graphql-query-builder.git"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "GraphQLClient\\": "src"
