--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "^6.2",
-        "himik/simple-graphql-query-builder": "0.2.4"
+        "himik/simple-graphql-query-builder": "dev-master"
     },
     "repositories": [
         {
