--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,14 @@
         "himik/simple-graphql-query-builder": "dev-master"
     },
     "repositories": [
+
+        {
+            "type": "path",
+            "url": "~/Development/simple-graphql-query-builder",
+            "options": {
+                "symlink": true
+            }
+        },
         {
             "type": "git",
             "url": "https://github.com/ravivco/simple-graphql-query-builder.git"
