--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "himik/graphql-api-client",
     "description": "Provide client based on guzzle",
+    "minimum-stability": "stable",
     "license": "proprietary",
     "authors": [
         {
@@ -13,17 +14,9 @@
         "himik/simple-graphql-query-builder": "dev-master"
     },
     "repositories": [
-
-        {
-            "type": "path",
-            "url": "~/Development/simple-graphql-query-builder",
-            "options": {
-                "symlink": true
-            }
-        },
         {
             "type": "git",
-            "url": "https://github.com/ravivco/simple-graphql-query-builder.git"
+            "url": "https://github.com/ravivco/graphql-query-builder.git"
         }
     ],
     "autoload": {
