--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "himik/graphql-api-client",
     "description": "Provide client based on guzzle",
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "license": "proprietary",
     "authors": [
         {
